// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`k8s-to-container-apps - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Migrate containerized workloads from Kubernetes clusters (self-hosted, GKE, EKS, on-premises) to Azure Container Apps with compatibility assessment and deployment automation. WHEN: migrate Kubernetes to Azure, move k8s workloads to Container Apps, reduce Kubernetes operational overhead, convert k8s deployments to ACA, migrate from GKE/EKS to Azure, simplify container orchestration.",
  "extractedKeywords": [
    "apps",
    "assessment",
    "automation",
    "azure",
    "bicep",
    "clusters",
    "compatibility",
    "container",
    "containerized",
    "convert",
    "deploy",
    "deployment",
    "deployments",
    "from",
    "identity",
    "k8s",
    "kubernetes",
    "mcp",
    "migrate",
    "monitor",
    "move",
    "on-premises",
    "operational",
    "orchestration",
    "overhead",
    "reduce",
    "self-hosted",
    "simplify",
    "validation",
    "when",
    "with",
    "workloads",
  ],
  "name": "k8s-to-container-apps",
}
`;

exports[`k8s-to-container-apps - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "apps",
  "assessment",
  "automation",
  "azure",
  "bicep",
  "clusters",
  "compatibility",
  "container",
  "containerized",
  "convert",
  "deploy",
  "deployment",
  "deployments",
  "from",
  "identity",
  "k8s",
  "kubernetes",
  "mcp",
  "migrate",
  "monitor",
  "move",
  "on-premises",
  "operational",
  "orchestration",
  "overhead",
  "reduce",
  "self-hosted",
  "simplify",
  "validation",
  "when",
  "with",
  "workloads",
]
`;
